# unitree_rl_lab

./: .gitignore  README.md
deploy/: install_dependencies.sh
deploy/include/: unitree_articulation.h
deploy/include/FSM/: BaseState.h  CtrlFSM.h  FSMState.h
deploy/include/isaaclab/algorithms/: algorithms.h
deploy/include/isaaclab/assets/articulation/: articulation.h
deploy/include/isaaclab/envs/: manager_based_rl_env.h
deploy/robots/b2/: CMakeLists.txt
deploy/robots/g1_23dof/: CMakeLists.txt
deploy/robots/g1_29dof/: CMakeLists.txt
deploy/robots/g1_29dof/config/policy/mimic/dance_102/exported/: policy.onnx
deploy/robots/g1_29dof/config/policy/mimic/gangnam_style/exported/: policy.onnx
deploy/robots/g1_29dof/config/policy/velocity/v0/exported/: policy.onnx
deploy/robots/g1_29dof/config/policy/velocity/v0/params/: deploy.yaml
deploy/robots/g1_29dof/src/: State_Mimic.cpp  State_RLBase.cpp
deploy/robots/go2/: CMakeLists.txt
deploy/robots/go2w/: CMakeLists.txt
deploy/robots/go2w/src/: State_RLBase.cpp
deploy/robots/h1/: CMakeLists.txt
deploy/robots/h1/src/: State_RLBase.cpp
deploy/robots/h1_2/: CMakeLists.txt
deploy/robots/r1/: CMakeLists.txt  main.cpp
deploy/robots/r1/config/: config.yaml
deploy/robots/r1/config/policy/track/exported/: 20260327_062134-total+Dance1_convert.onnx  README.txt  policy.onnx
deploy/robots/r1/config/policy/track/params/: 20260319_141716_798_taotao_segment_001_1134_5282.r1trk  deploy.yaml  reference.r1trk  z_005.r1trk
deploy/robots/r1/include/: State_Track.h  Types.h
deploy/robots/r1/src/: State_RLBase.cpp  State_Track.cpp
deploy/robots/r1/tools/: r1_joint_sine_diag.cpp  r1_left_ankle_diag.cpp  r1_target_replay_diag.cpp
doc/: g1_sim2sim_keyboard.md  g1_sim2sim_keyboard_zh.md  r1_sim2sim_keyboard_zh.md
scripts/r1/: compare_target_replay.py  convert_track_npz.py  plot_joint_sine_diag.py  plot_joint_tracking.py  plot_left_ankle_diag.py  plot_track_ankle_diagnostic.py
source/unitree_rl_lab/unitree_rl_lab/assets/robots/: unitree.py
